<resources>
    <string name="app_name">AwaMinder</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingrese_su_contrase_a">Contraseña</string>
    <string name="ingrese_su_nombre">Usuario</string>
    <string name="title_activity_cambiar_contrasenia">cambiar contraseña</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hora_de_inicio_notificaciones">Hora de inicio notificaciones</string>
    <string name="hora_de_fin_notificaciones">Hora de fin notificaciones</string>
    <string name="guardar">Guardar</string>
    <string name="detener">Detener</string>
    <string name="beneficios_cortos_de_tomar_agua">Beneficios cortos de tomar agua</string>
    <string name="hidratacion">Hidratación: El agua ayuda a mantener el equilibrio hídrico en el cuerpo, manteniéndote hidratado y favoreciendo el funcionamiento adecuado de tus órganos y sistemas.</string>
    <string name="energia">Energía y rendimiento: Beber suficiente agua puede aumentar tu energía y mejorar tu rendimiento físico y mental, ya que ayuda a transportar nutrientes y oxígeno a través del cuerpo.</string>
    <string name="digestion">Digestión saludable: El agua facilita la digestión adecuada y evita el estreñimiento al mantener los intestinos lubricados y en movimiento.</string>
    <string name="salud">Salud de la piel: Mantener una hidratación adecuada puede mejorar la apariencia y salud de tu piel, manteniéndola hidratada y ayudando a prevenir problemas como la sequedad y la formación de arrugas.</string>
    <string name="calcular_cantidad">Calcular cantidad</string>
    <string name="ingrese_su_peso">Ingrese su peso</string>
    <string name="peso_en_kilos">Peso en kilos</string>
    <string name="plan_personalizado">Plan personalizado</string>
    <string name="ingresa_tu_meta_propia">Ingresa tu meta propia</string>
    <string name="ingrese_litros">Ingrese litros</string>
    <string name="calcular">Calcular</string>
    <string name="no_recuerdas_tu_contrase_a">No recuerdas tu contraseña !!!</string>
    <string name="usuario">Usuario</string>
    <string name="verificar_existecia">verificar existencia</string>
    <string name="regresar_al_login">Regresar al login</string>
    <string name="consejos_cortos_para_tomar_agua">Consejos cortos para tomar agua</string>
    <string name="consejo1">Establece metas de consumo de agua: Define una meta diaria de cuántos vasos o litros de agua deseas consumir.</string>
    <string name="consejo2">Lleva contigo una botella de agua: Mantén una botella de agua contigo a lo largo del día, ya sea en tu bolso, mochila o en tu escritorio. Esto te recordará beber agua regularmente y facilitará el acceso a ella.</string>
    <string name="consejo3">Establece recordatorios: Configura recordatorios en tu teléfono o utiliza aplicaciones específicas para recordarte beber agua a intervalos regulares. Esto puede ser especialmente útil si tiendes a olvidarte de beber agua durante el día.</string>
    <string name="consejo4">Mantén un registro: Lleva un registro de tu consumo de agua para hacer un seguimiento de cuánto estás bebiendo.</string>
    <string name="bienvenido_de_vuelta">Bienvenido de vuelta !!!</string>
    <string name="has_olvidado_tu_contrase_a">Has olvidado tu contraseña?</string>
    <string name="logros">Logros</string>
    <string name="racha_de_d_as_00">Racha de días: 00</string>
    <string name="meta_diaria_00">Meta diaria: 00</string>
    <string name="crear_tu_cuenta_n_nunca_fue_m_s_f_cil">¡Crear tu cuenta \n nunca fue más fácil!</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="meta_de_hoy">Meta de hoy!</string>
    <string name="escoge_tu_plan">Escoge tu plan!!</string>
    <string name="mi_propio_plan">Mi propio plan</string>
    <string name="plan_recomendado">Plan recomendado</string>
    <string name="ya_tengo_un_plan">Ya tengo un plan</string>
    <string name="consejos">Consejos</string>
    <string name="hora">Hora</string>
    <string name="beneficios">Beneficios</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="cambiar_plan">Cambiar plan</string>
    <string name="tomar">TOMAR</string>
    <string name="contrase_a">Contraseña</string>
</resources>