<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add"
        android:title="@string/consejos"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_agenda"
        />

    <item
        android:id="@+id/hora"
        android:title="@string/hora"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/presence_away"
        />
    <item
        android:id="@+id/logro"
        android:title="@string/logros"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/water_drop_icon"
        />


    <item
        android:id="@+id/benenficios"
        android:title="@string/beneficios"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:icon="@android:drawable/checkbox_on_background"
        />
    <item
        android:id="@+id/cerraS"
        android:title="@string/cerrar_sesion"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        />
    <item
        android:id="@+id/changeP"
        android:title="@string/cambiar_plan"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        />



</menu>