<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/frase"
            android:layout_width="match_parent"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:textColor="#ffc7ee"
            android:text="@string/crear_tu_cuenta_n_nunca_fue_m_s_f_cil"
            android:layout_height="wrap_content">


        </TextView>
        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/TVnombre"
                android:textStyle="italic"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:text="@string/usuario"/>
            <EditText
                android:id="@+id/ETnombre"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/ingrese_su_nombre"
                android:layout_height="50dp" />
            <TextView
                android:id="@+id/TVcontrasenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:textStyle="italic"
                android:layout_marginTop="18dp"
                android:textColor="@color/black"
                android:text="@string/contrase_a"/>
            <EditText
                android:id="@+id/ETcontrasenia"
                android:layout_width="match_parent"
                android:hint="@string/ingrese_su_contrase_a"
                android:inputType="textPassword"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_height="50dp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnGuardar"

                    android:layout_marginTop="40dp"
                    android:layout_width="185dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:text="@string/registrarse"
                    android:onClick="Agregar"
                    android:background="@drawable/round_corner_button"
                    />


                <Button
                    android:id="@+id/TVcrearcuenta"
                    android:layout_width="150dp"
                    android:background="@android:color/transparent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:onClick="canmbiarACT"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/imgfondo" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>