<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".alarmStop">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_inicio_notificaciones"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/timeButton"
        android:onClick="popTimePicker"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="30sp"
        android:width="300dp"
        android:height="100dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_fin_notificaciones"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/timeButtonEnd"
        android:onClick="popTimePickerfin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="30sp"
        android:width="300dp"
        android:height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnGuardarHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/guardar"
            android:layout_margin="20dp"
            android:onClick="guardarHoras" />

        <Button
            android:id="@+id/disableHoras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"

            android:onClick="disableHora"
            android:text="@string/detener" />

    </LinearLayout>



</LinearLayout>